<resources>

    <string name="app_name">Bonjour Madame</string>
    <string name="menu_settings">Options</string>
    <string name="title_activity_main">Bonjour Madame</string>
    <string name="title_activity_receiver">Alarm Receiver</string>
    <string name="refresh_desktop">Mettre à jour le fond d\'écran</string>
    <string name="schedule">Changer le fond d\'écran tous les jours</string>
    <string name="preview">Prévisualisation</string>
    <string name="schedule_activate">Tâche planifiée activée</string>
    <string name="schedule_desactivate">Tâche planifiée désactivée</string>
    <string name="option_activity_main">Options</string>
    <string name="site_label">URL à parser</string>
    <string name="pattern_label">Pattern</string>
    <string name="save">Enregistrer</string>

</resources>