<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/parse_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/parse_url"
        android:layout_alignBottom="@+id/parse_url"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/parse_url"
        android:text="@string/site_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/parse_url"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pattern"
        android:layout_alignBottom="@+id/pattern"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/pattern"
        android:text="@string/pattern_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" />

</RelativeLayout>